# wazuh-ansible

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .swp  .test-5538  .travis.yml  .yamllint  1  CHANGELOG.md  DEPLOYMENT.md  Pipfile  Pipfile.template  README.md  SECURITY.md  VERSION  VERSION.json  ansible.cfg.example  check_packages.sh  configure_commands_wazuh_agent.ps1  elk.retry  elk.yml  galaxy.yml  generate-certs.sh  inventory  move_this  packages_uri.txt  pyproject.toml  requirements.yml  run_cluster_mode.sh  run_none_cluster.sh  setup.sh  site.yml  test_bumper.sh  update-dnsmasq.sh  user.yml  vars.yml  wazuh-agent-4.1.0-1.msi  wazuh-agent.retry  wazuh-agent.yml  wazuh-aio.yml  (+9 more)
.circleci/: config.yml
.github/: dependabot.yml
ansible-role-elasticsearch/: README.md
ansible-role-elk/: README.md
ansible-role-filebeat/: README.md
ansible-role-kibana/: README.md
ansible-role-logstash/: README.md
ansible-wazuh-agent/: README.md
ansible-wazuh-manager/: .kitchen.yml  README.md  molecule.yml
ansible-wazuh-server/: CHANGELOG.md  README.md  playbook.retry  playbook.yml
docs/: INSTALLATION.md  README.md  SUMMARY.md  book.toml
examples/: agent.yml  aio.yml  cluster.yml  cluster_dashboard.yml  cluster_indexer.yml  cluster_manager.yml  cluster_worker.yml  manager.yml
group_vars/: all.yml.example
inventory/: hosts.yml.example
meta/: main.yml  runtime.yml
molecule/: run_cluster_mode.sh
playbooks/: README.md  ansible.cfg  filebeat.yml  install-agent.yml  install-aio.yml  install-cluster.yml  install-dashboard.yml  install-indexer.yml  install-manager.yml  install_agent.yml  install_aio.yml  install_manager.yml  wazuh-agent.yml  wazuh-agents.yml  wazuh-all-in-one.yml  wazuh-dashboard.yml  wazuh-docker-lab.yml  wazuh-elastic-single.yml  wazuh-elastic.yml  wazuh-elastic_stack-distributed.yml  wazuh-elastic_stack-single.yml  wazuh-elastic_stack-single.yml.original  wazuh-indexer-and-dashboard.yml  wazuh-indexer-mio.yml  wazuh-indexer.yml  wazuh-kibana-single.yml  wazuh-kibana.yml  wazuh-logstash.yml  wazuh-manager-only.yml  wazuh-manager-oss-cluster.yml  wazuh-manager-oss.yml  wazuh-manager.yml  (+16 more)
(+688 files in other folders)
