[tool.poetry]
name = "wazuh-ansible"
version = "4.5.0"
description = ""
authors = ["neonmei <neonmei@pm.me>"]

[tool.poetry.dependencies]
python = "^3.6"

# Pin ansible version to that currently present on awx
ansible = "==4.10.0"
jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
ansible-lint = "^5.4.0"
flake8 = "^4.0.1"
selinux = "^0.2.1"
yamllint = "^1.26.3"

# minimum version is 3.0.3, because we need docker memory limitation
# https://github.com/ansible-community/molecule/pull/2615
molecule = {extras = ["docker"], version = "==3.3.4"}
testinfra = "^6.0.0"

[build-system]
requires = ["poetry>=1.1.8"]
build-backend = "poetry.masonry.api"
